--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,20 +10,16 @@ html(lang="en")
         header
             h1 Zoom
         main
-            div#welcome
+            div#welcome  
                 form
-                    input(placeholder="room name", required, type="text") 
-                    button Enter Room
-                h4 Open Rooms: 
-                ul
-            div#room
-                h3
-                ul 
-                form#name
-                    input(placeholder="nickname", required, type="text") 
-                    button Save
-                form#msg
-                    input(placeholder="message", required, type="text") 
-                    button Send
+                    input(placeholder="room name", required, type="text")
+                    button Enter room
+            div#call
+                div#myStream
+                    video#myFace(autoplay,playsinLine, width="400", height="400") 
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras
+                    video#peersFace(autoplay,playsinLine, width="400", height="400")
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
